# Geo-Evaluate

./: .gitignore  README.md  how_to_run.md  pyproject.toml  requirements.txt  three_way_comparison_analysis.md
assignments/: final_project.ipynb
assignments/final_project_files/: gan_metrics_by_coverage.csv  temporal_metrics_by_coverage.csv
configs/: default.yaml
outputs/.matplotlib/: fontlist-v390.json
outputs/logs/: train_loss.csv
outputs/metrics/: all_methods.csv  diffusion_metrics.csv  diffusion_metrics_buggy.csv  diffusion_metrics_by_coverage.csv  diffusion_metrics_by_coverage_buggy.csv  diffusion_metrics_by_coverage_white_bias_init.csv  diffusion_metrics_white_bias_init.csv  gan_metrics.csv  temporal_metrics.csv
outputs/notes/: diffusion_init_bias_fix.md
scripts/: convert_geotiff_to_npy.py  diagnose_diffusion.py  diagnose_no_torch.py  download_sentinel2_beijing.py  interpretation.py  parse_old_tqdm_log.py  plot_loss.py  prepare_synthetic_dataset.py  qualitative_error_grid.py  qualitative_grid.py  rerun_diffusion_eval.sh  run_experiment.py
src/cloud_removal/: __init__.py
src/cloud_removal/data/: dataset.py  synthetic_clouds.py
src/cloud_removal/evaluation/: metrics.py  plots.py
src/cloud_removal/models/: baseline.py  diffusion.py  unet.py
src/cloud_removal/training/: evaluate.py  train_diffusion.py  train_gan.py
src/cloud_removal/utils/: config.py
src/geo_cloud_removal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
